--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Lemon&family=Nanum+Gothic:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lemon&family=Nanum+Gothic:wght@400;700&family=Noto+Sans+KR:wght@100..900&display=swap');
